# msf

./: .gitignore  main.py  pyproject.toml  test_algo.py
_output_schedules/: h1_schedule.json  simulated_annealing_schedule.json
data/output_schedules/: h1_schedule.json  sa_schedule.json  simulated_annealing_schedule.json
msf/: instance_generator.py  speed_generator.py  visualizer.py
msf/algorithms/: h1.py  h1_test_version.py  simulated_annealing.py  upperbound.py
msf/utils/: helpers.py  models.py  test_data_lalala.py  validator.py
src/: instance_generator.py  settings.py  speed_generator.py  visualizer.py
src/algorithms/: h1.py  h1_test_version.py  simulated_annealing.py
